# SparkleShare

./: .sparkleshare
SparkleLib/: Defines.cs
SparkleLib/Git/: SparkleRepoGit.cs
SparkleShare/: SparklePlugin.cs  SparkleSetupController.cs
SparkleShare/Common/Plugins/: Makefile.am  networks.xml
SparkleShare/Linux/: SparkleSetup.cs  SparkleSetupWindow.cs  SparkleStatusIcon.cs
