dist_plugins_DATA = \
    bitbucket.xml \
    github.xml \
    gitorious.xml \
    ssnet.xml \
    own-server.xml \
    networks.xml \
    planio.xml \
    github.png \
    gitorious.png \
    bitbucket.png \
    ssnet.png \
    planio.png \
    own-server.png \
    obo.jpg

pluginsdir = $(pkgdatadir)/plugins/

MAINTAINERCLEANFILES = \
	Makefile.in
